# rust-samplr

./: CHANGELOG.md  Cargo.toml  README.md
envisim_estimate/: CHANGELOG.md  Cargo.toml  README.md
envisim_estimate/src/: hansen_hurwitz.rs  horvitz_thompson.rs  lib.rs  nearest_neighbour.rs  spatial_balance.rs
envisim_estimate/tests/: spatial_balance.rs
envisim_test_utils/: Cargo.toml
envisim_test_utils/src/: lib.rs
envisim_utils/: CHANGELOG.md  Cargo.toml  README.md
envisim_utils/src/: error.rs  indices.rs  lib.rs  matrix.rs  pips.rs  probabilities.rs  utils.rs
envisim_utils/src/kd_tree/: mod.rs  node.rs  searcher.rs  split_methods.rs
envisim_utils/src/probability/: mod.rs  pips.rs  probabilities.rs
envisim_utils/tests/: matrix.rs  pips.rs  probabilities.rs  searcher.rs
estimate/: Cargo.toml
estimate/src/: hansen_hurwitz.rs  horvitz_thompson.rs  lib.rs  nearest_neighbour.rs  spatial_balance.rs  test_utils.rs
estimate/tests/: spatial_balance.rs
rpkg/samplr/: .Rbuildignore  .gitignore  DESCRIPTION
rpkg/samplr/R/: lpm.R
rpkg/samplr/src/: Makevars  Makevars.win  samplr-win.def
rpkg/samplr/src/rust/: Cargo.toml
rpkg/samplr/src/rust/src/: lib.rs
rpkg_samplr/: .Rbuildignore  DESCRIPTION  NAMESPACE
rpkg_samplr/R/: extendr-wrappers.R
rpkg_samplr/src/: Makevars  Makevars.win  entrypoint.c
rpkg_samplr/src/rust/: Cargo.toml
rpkg_samplr/src/rust/src/: lib.rs
samplr/: Cargo.toml
samplr/src/: correlated_poisson.rs  cube_method.rs  lib.rs  macros.rs  pivotal_method.rs  proportional.rs  srs.rs  systematic.rs  test_utils.rs  utils.rs
samplr/src/pivotal_method/: base.rs  lpm1.rs  lpm1s.rs  lpm2.rs  rpm.rs  spm.rs
samplr/src/poisson/: correlated_poisson.rs  mod.rs
samplr/tests/: cube_method.rs  poisson.rs
src/: cube_method.rs  error.rs  lib.rs  pivotal_method.rs  sample_options.rs  srs.rs  systematic.rs  unequal.rs  utils.rs
src/poisson/: correlated_poisson.rs  mod.rs
tests/: cube_method.rs  pivotal_method.rs  poisson.rs  proportional.rs  srs.rs  systematic.rs  unequal.rs
tests/test_utils/: mod.rs
utils/: Cargo.toml
utils/src/: container.rs  error.rs  generate_random.rs  indices.rs  internal_macros.rs  kd_tree.rs  lib.rs  matrix.rs  pips.rs  probability.rs  random_generator.rs  sampling_controller.rs  spatial_balance.rs  test_utils.rs  uniform_random.rs  utils.rs
utils/src/estimator/: hansen_hurwitz.rs  horvitz_thompson.rs  mod.rs
utils/src/kd_tree/: mod.rs  node.rs  searcher.rs  split_methods.rs  store.rs  tree.rs
utils/src/probability/: pips.rs  probabilities.rs
utils/tests/: indices.rs  pips.rs  searcher.rs
